--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "pinia": "^2.0.32",
+    "vant": "^4.1.2",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
@@ -38,8 +39,10 @@
     "prettier": "^2.8.4",
     "start-server-and-test": "^2.0.0",
     "typescript": "~4.8.4",
+    "unplugin-vue-components": "^0.24.1",
     "vite": "^4.1.4",
     "vitest": "^0.29.1",
-    "vue-tsc": "^1.2.0"
+    "vue-tsc": "^1.2.0",
+    "postcss-px-to-viewport": "^1.1.1"
   }
 }
