--- a/package.json
+++ b/package.json
@@ -36,13 +36,14 @@
     "eslint-plugin-vue": "^9.9.0",
     "jsdom": "^21.1.0",
     "npm-run-all": "^4.1.5",
+    "postcss-px-to-viewport": "^1.1.1",
     "prettier": "^2.8.4",
+    "sass": "^1.62.0",
     "start-server-and-test": "^2.0.0",
     "typescript": "~4.8.4",
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.1.4",
     "vitest": "^0.29.1",
-    "vue-tsc": "^1.2.0",
-    "postcss-px-to-viewport": "^1.1.1"
+    "vue-tsc": "^1.2.0"
   }
 }
