--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "eslint-plugin-vue": "^9.9.0",
     "jsdom": "^21.1.0",
     "npm-run-all": "^4.1.5",
-    "postcss-px-to-viewport": "^1.1.1",
+    "postcss-px-to-viewport-8-plugin": "^1.2.2",
     "prettier": "^2.8.4",
     "sass": "^1.62.0",
     "start-server-and-test": "^2.0.0",
