--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.3.5",
     "pinia": "^2.0.32",
+    "qrcodejs2": "^0.0.2",
     "vant": "^4.1.2",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
@@ -26,7 +28,7 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
     "@types/jsdom": "^21.1.0",
-    "@types/node": "^18.14.2",
+    "@types/node": "^18.15.11",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^3.0.0",
     "@vue/eslint-config-prettier": "^7.1.0",
