--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-vue": "^9.9.0",
     "jsdom": "^21.1.0",
+    "mockjs": "^1.1.0",
     "npm-run-all": "^4.1.5",
     "postcss-px-to-viewport-8-plugin": "^1.2.2",
     "prettier": "^2.8.4",
@@ -48,6 +49,7 @@
     "typescript": "~4.8.4",
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.1.4",
+    "vite-plugin-mock": "^2.9.6",
     "vitest": "^0.29.1",
     "vue-tsc": "^1.2.0"
   }
