--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,5 +4,18 @@
   "tabWidth": 2,
   "singleQuote": true,
   "printWidth": 100,
-  "trailingComma": "none"
+  "trailingComma": "none",
+  "overrides": [
+    {
+      "files": [
+        "*.css",
+        "*.scss",
+        "*.html"
+      ],
+      "options": {
+        "semi": true,
+        "singleQuote": false
+      }
+    }
+  ]
 }
