--- a/package.json
+++ b/package.json
@@ -44,13 +44,18 @@
     "npm-run-all": "^4.1.5",
     "postcss-px-to-viewport-8-plugin": "^1.2.2",
     "prettier": "^2.8.4",
+    "rollup-plugin-visualizer": "^5.9.0",
     "sass": "^1.62.0",
     "start-server-and-test": "^2.0.0",
     "typescript": "~4.8.4",
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.1.4",
     "vite-plugin-mock": "^2.9.6",
+    "vite-plugin-require-transform": "^1.0.12",
     "vitest": "^0.29.1",
     "vue-tsc": "^1.2.0"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
