--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@rushstack/eslint-patch": "^1.2.0",
     "@types/jsdom": "^21.1.0",
     "@types/node": "^18.15.11",
+    "@vitejs/plugin-legacy": "^4.0.2",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^3.0.0",
     "@vue/eslint-config-prettier": "^7.1.0",
@@ -47,6 +48,7 @@
     "rollup-plugin-visualizer": "^5.9.0",
     "sass": "^1.62.0",
     "start-server-and-test": "^2.0.0",
+    "terser": "^5.16.9",
     "typescript": "~4.8.4",
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.1.4",
