--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "npm-run-all": "^4.1.5",
     "postcss-px-to-viewport-8-plugin": "^1.2.2",
     "prettier": "^2.8.4",
+    "rollup-plugin-external-globals": "^0.7.3",
     "rollup-plugin-visualizer": "^5.9.0",
     "sass": "^1.62.0",
     "start-server-and-test": "^2.0.0",
