--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "typescript": "~4.8.4",
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.1.4",
+    "vite-plugin-compression": "^0.5.1",
     "vite-plugin-mock": "^2.9.6",
     "vite-plugin-require-transform": "^1.0.12",
     "vitest": "^0.29.1",
