--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "vite": "^4.1.4",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-mock": "^2.9.6",
+    "vite-plugin-qiankun": "^1.0.15",
     "vite-plugin-require-transform": "^1.0.12",
     "vitest": "^0.29.1",
     "vue-tsc": "^1.2.0"
