--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "f-vue3-template",
-  "version": "0.0.0",
-  "private": true,
+  "name": "{{name}}",
+  "version": "1.0.0",
+  "description": "{{description}}",
+  "author": "{{author}}",
   "scripts": {
     "dev": "vite --mode development",
     "mock": "vite --mode mock",
