--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "{{name}}",
+  "name": "f-vue3-template",
   "version": "1.0.0",
   "description": "{{description}}",
   "author": "{{author}}",
@@ -36,6 +36,7 @@
     "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/test-utils": "^2.3.0",
     "@vue/tsconfig": "^0.1.3",
+    "autoprefixer": "^10.4.15",
     "cypress": "^12.7.0",
     "eslint": "^8.34.0",
     "eslint-plugin-cypress": "^2.12.1",
@@ -61,5 +62,8 @@
   },
   "engines": {
     "node": "16.x"
-  }
+  },
+  "browserslist": [
+    "defaults"
+  ]
 }
