--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@rushstack/eslint-patch": "^1.2.0",
     "@types/jsdom": "^21.1.0",
     "@types/node": "^18.15.11",
+    "@vant/auto-import-resolver": "^1.0.2",
     "@vitejs/plugin-legacy": "^4.0.2",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^3.0.0",
