--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-mock": "^2.9.6",
     "vite-plugin-require-transform": "^1.0.12",
+    "vite-plugin-starting-pattern": "^1.0.0",
     "vitest": "^0.29.1",
     "vue-tsc": "^1.2.0"
   },
